# Souris

./: .gitmodules  CMakeLists.txt  README.md
Souris/: CMakeLists.txt
Souris/src/: main.cpp
Souris/src/core/: defines.hpp  int_types.hpp  utilities.cpp  utilities.hpp
Souris/src/core/client/: client.cpp  client.hpp
Souris/src/core/client/delegator/: delegator.hpp
Souris/src/core/client/delegator/types/: message_box.cpp  message_box.hpp
Souris/src/core/client/delegator/types/client_path/: client_path.cpp  client_path.hpp
Souris/src/core/client/delegator/types/process_start/: process_start.cpp  process_start.hpp
Souris/src/core/client/delegator/types/stop/: stop.cpp  stop.hpp
Souris/src/core/client/message/: message.hpp
Souris/src/core/client/message/types/: message_box.cpp  message_box.hpp  print.cpp  print.hpp
Souris/src/core/controller/: controller.cpp  controller.hpp
Souris/src/core/launcher/: launcher.cpp  launcher.hpp
Souris/src/platform/: platform.hpp
Souris/src/platform/linux/: controller.hpp  launcher.hpp  linux.hpp  process.cpp  socket_client.cpp  utilities.cpp
Souris/src/platform/linux/controller/: controller.hpp
Souris/src/platform/linux/core/: utilities.cpp  utilities.hpp
Souris/src/platform/linux/core/controller/: controller.hpp
Souris/src/platform/linux/core/process/: process.cpp  process.hpp
Souris/src/platform/linux/core/socket/: socket.hpp
Souris/src/platform/linux/socket/client/: client.cpp  client.hpp
Souris/src/platform/tools/: message_box.hpp  process.hpp  socket.hpp  socket_client.hpp  utilities.hpp
(+4 files in other folders)
